Compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> PROGRAM ID LEFTBRACKET variable block RIGHTBRACKET
Rule 2     Program -> PROGRAM ID LEFTBRACKET block RIGHTBRACKET
Rule 3     variable -> VAR variables COLON datatype SEMICOLON
Rule 4     variable -> variable variable
Rule 5     variables -> ID
Rule 6     variables -> variables COMMA variables
Rule 7     datatype -> INT
Rule 8     datatype -> REAL
Rule 9     datatype -> BOOL
Rule 10    datatype -> STR
Rule 11    block -> BEGIN SEMICOLON statement END SEMICOLON
Rule 12    statement -> writestatement
Rule 13    statement -> assignstatement
Rule 14    statement -> ifstatement
Rule 15    statement -> whileloop
Rule 16    statement -> forloop
Rule 17    statement -> statement statement
Rule 18    writestatement -> WRITE LEFTPARENTHESIS expression point_ae RIGHTPARENTHESIS SEMICOLON
Rule 19    assignstatement -> ID ASSIGN expression point_ae SEMICOLON
Rule 20    assignstatement -> ID PLUSPLUS SEMICOLON
Rule 21    assignstatement -> ID MINUSMINUS SEMICOLON
Rule 22    ifstatement -> IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET
Rule 23    ifstatement -> IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET ELSE LEFTBRACKET statement RIGHTBRACKET
Rule 24    whileloop -> WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
Rule 25    forloop -> FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON ID increment_decrement RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET
Rule 26    increment_decrement -> PLUSPLUS
Rule 27    increment_decrement -> MINUSMINUS
Rule 28    expression -> logical_expression
Rule 29    expression -> relational_expression
Rule 30    expression -> arithmetic_expression
Rule 31    expression -> expression_id
Rule 32    expression -> STRING
Rule 33    logical_expression -> relational_expression
Rule 34    logical_expression -> relational_expression point_ae AND relational_expression point_ae
Rule 35    logical_expression -> relational_expression point_ae OR relational_expression point_ae
Rule 36    logical_expression -> logical_expression point_ae AND logical_expression point_ae
Rule 37    logical_expression -> logical_expression point_ae OR logical_expression point_ae
Rule 38    logical_expression -> LEFTPARENTHESIS logical_expression RIGHTPARENTHESIS
Rule 39    relational_expression -> arithmetic_expression point_ae GREATER arithmetic_expression point_ae
Rule 40    relational_expression -> arithmetic_expression point_ae LESSER arithmetic_expression point_ae
Rule 41    relational_expression -> arithmetic_expression point_ae GREATEREQUAL arithmetic_expression point_ae
Rule 42    relational_expression -> arithmetic_expression point_ae LESSEREQUAL arithmetic_expression point_ae
Rule 43    relational_expression -> arithmetic_expression point_ae EQUAL arithmetic_expression point_ae
Rule 44    relational_expression -> STRING EQUAL STRING
Rule 45    relational_expression -> LEFTPARENTHESIS relational_expression RIGHTPARENTHESIS
Rule 46    relational_expression -> BOOLEAN
Rule 47    arithmetic_expression -> arithmetic_expression point_ae PLUS arithmetic_expression point_ae
Rule 48    arithmetic_expression -> arithmetic_expression point_ae MINUS arithmetic_expression point_ae
Rule 49    arithmetic_expression -> arithmetic_expression point_ae TIMES arithmetic_expression point_ae
Rule 50    arithmetic_expression -> arithmetic_expression point_ae DIVIDE arithmetic_expression point_ae
Rule 51    arithmetic_expression -> LEFTPARENTHESIS arithmetic_expression RIGHTPARENTHESIS
Rule 52    arithmetic_expression -> expression_id
Rule 53    arithmetic_expression -> INTEGER
Rule 54    arithmetic_expression -> NUMBER
Rule 55    expression_id -> ID
Rule 56    empty -> <empty>
Rule 57    point_ae -> <empty>

Terminals, with rules where they appear

AND                  : 34 36
ASSIGN               : 19 25
BEGIN                : 11
BOOL                 : 9
BOOLEAN              : 46
COLON                : 3
COMMA                : 6
DIVIDE               : 50
DO                   : 24
ELSE                 : 23
END                  : 11
EQUAL                : 43 44
FOR                  : 25
GREATER              : 39
GREATEREQUAL         : 41
ID                   : 1 2 5 19 20 21 25 25 55
IF                   : 22 23
INT                  : 7
INTEGER              : 53
LEFTBRACKET          : 1 2 22 23 23 24 25
LEFTPARENTHESIS      : 18 22 23 24 25 38 45 51
LESSER               : 40
LESSEREQUAL          : 42
MINUS                : 48
MINUSMINUS           : 21 27
NUMBER               : 54
OR                   : 35 37
PLUS                 : 47
PLUSPLUS             : 20 26
PROGRAM              : 1 2
REAL                 : 8
RIGHTBRACKET         : 1 2 22 23 23 24 25
RIGHTPARENTHESIS     : 18 22 23 24 25 38 45 51
SEMICOLON            : 3 11 11 18 19 20 21 25 25
STR                  : 10
STRING               : 32 44 44
THEN                 : 22 23
TIMES                : 49
VAR                  : 3
WHILE                : 24
WRITE                : 18
error                : 

Nonterminals, with rules where they appear

Program              : 0
arithmetic_expression : 30 39 39 40 40 41 41 42 42 43 43 47 47 48 48 49 49 50 50 51
assignstatement      : 13
block                : 1 2
datatype             : 3
empty                : 
expression           : 18 19 22 23 24 25 25
expression_id        : 31 52
forloop              : 16
ifstatement          : 14
increment_decrement  : 25
logical_expression   : 28 36 36 37 37 38
point_ae             : 18 19 34 34 35 35 36 36 37 37 39 39 40 40 41 41 42 42 43 43 47 47 48 48 49 49 50 50
relational_expression : 29 33 34 34 35 35 45
statement            : 11 17 17 22 23 23 24 25
variable             : 1 4 4
variables            : 3 6 6
whileloop            : 15
writestatement       : 12

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . PROGRAM ID LEFTBRACKET variable block RIGHTBRACKET
    (2) Program -> . PROGRAM ID LEFTBRACKET block RIGHTBRACKET

    PROGRAM         shift and go to state 2

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> PROGRAM . ID LEFTBRACKET variable block RIGHTBRACKET
    (2) Program -> PROGRAM . ID LEFTBRACKET block RIGHTBRACKET

    ID              shift and go to state 3


state 3

    (1) Program -> PROGRAM ID . LEFTBRACKET variable block RIGHTBRACKET
    (2) Program -> PROGRAM ID . LEFTBRACKET block RIGHTBRACKET

    LEFTBRACKET     shift and go to state 4


state 4

    (1) Program -> PROGRAM ID LEFTBRACKET . variable block RIGHTBRACKET
    (2) Program -> PROGRAM ID LEFTBRACKET . block RIGHTBRACKET
    (3) variable -> . VAR variables COLON datatype SEMICOLON
    (4) variable -> . variable variable
    (11) block -> . BEGIN SEMICOLON statement END SEMICOLON

    VAR             shift and go to state 7
    BEGIN           shift and go to state 8

    variable                       shift and go to state 5
    block                          shift and go to state 6

state 5

    (1) Program -> PROGRAM ID LEFTBRACKET variable . block RIGHTBRACKET
    (4) variable -> variable . variable
    (11) block -> . BEGIN SEMICOLON statement END SEMICOLON
    (3) variable -> . VAR variables COLON datatype SEMICOLON
    (4) variable -> . variable variable

    BEGIN           shift and go to state 8
    VAR             shift and go to state 7

    variable                       shift and go to state 9
    block                          shift and go to state 10

state 6

    (2) Program -> PROGRAM ID LEFTBRACKET block . RIGHTBRACKET

    RIGHTBRACKET    shift and go to state 11


state 7

    (3) variable -> VAR . variables COLON datatype SEMICOLON
    (5) variables -> . ID
    (6) variables -> . variables COMMA variables

    ID              shift and go to state 13

    variables                      shift and go to state 12

state 8

    (11) block -> BEGIN . SEMICOLON statement END SEMICOLON

    SEMICOLON       shift and go to state 14


state 9

    (4) variable -> variable variable .
    (4) variable -> variable . variable
    (3) variable -> . VAR variables COLON datatype SEMICOLON
    (4) variable -> . variable variable

  ! shift/reduce conflict for VAR resolved as shift
    BEGIN           reduce using rule 4 (variable -> variable variable .)
    VAR             shift and go to state 7

  ! VAR             [ reduce using rule 4 (variable -> variable variable .) ]

    variable                       shift and go to state 9

state 10

    (1) Program -> PROGRAM ID LEFTBRACKET variable block . RIGHTBRACKET

    RIGHTBRACKET    shift and go to state 15


state 11

    (2) Program -> PROGRAM ID LEFTBRACKET block RIGHTBRACKET .

    $end            reduce using rule 2 (Program -> PROGRAM ID LEFTBRACKET block RIGHTBRACKET .)


state 12

    (3) variable -> VAR variables . COLON datatype SEMICOLON
    (6) variables -> variables . COMMA variables

    COLON           shift and go to state 16
    COMMA           shift and go to state 17


state 13

    (5) variables -> ID .

    COLON           reduce using rule 5 (variables -> ID .)
    COMMA           reduce using rule 5 (variables -> ID .)


state 14

    (11) block -> BEGIN SEMICOLON . statement END SEMICOLON
    (12) statement -> . writestatement
    (13) statement -> . assignstatement
    (14) statement -> . ifstatement
    (15) statement -> . whileloop
    (16) statement -> . forloop
    (17) statement -> . statement statement
    (18) writestatement -> . WRITE LEFTPARENTHESIS expression point_ae RIGHTPARENTHESIS SEMICOLON
    (19) assignstatement -> . ID ASSIGN expression point_ae SEMICOLON
    (20) assignstatement -> . ID PLUSPLUS SEMICOLON
    (21) assignstatement -> . ID MINUSMINUS SEMICOLON
    (22) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET
    (23) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET ELSE LEFTBRACKET statement RIGHTBRACKET
    (24) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (25) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON ID increment_decrement RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET

    WRITE           shift and go to state 24
    ID              shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28

    statement                      shift and go to state 18
    writestatement                 shift and go to state 19
    assignstatement                shift and go to state 20
    ifstatement                    shift and go to state 21
    whileloop                      shift and go to state 22
    forloop                        shift and go to state 23

state 15

    (1) Program -> PROGRAM ID LEFTBRACKET variable block RIGHTBRACKET .

    $end            reduce using rule 1 (Program -> PROGRAM ID LEFTBRACKET variable block RIGHTBRACKET .)


state 16

    (3) variable -> VAR variables COLON . datatype SEMICOLON
    (7) datatype -> . INT
    (8) datatype -> . REAL
    (9) datatype -> . BOOL
    (10) datatype -> . STR

    INT             shift and go to state 30
    REAL            shift and go to state 31
    BOOL            shift and go to state 32
    STR             shift and go to state 33

    datatype                       shift and go to state 29

state 17

    (6) variables -> variables COMMA . variables
    (5) variables -> . ID
    (6) variables -> . variables COMMA variables

    ID              shift and go to state 13

    variables                      shift and go to state 34

state 18

    (11) block -> BEGIN SEMICOLON statement . END SEMICOLON
    (17) statement -> statement . statement
    (12) statement -> . writestatement
    (13) statement -> . assignstatement
    (14) statement -> . ifstatement
    (15) statement -> . whileloop
    (16) statement -> . forloop
    (17) statement -> . statement statement
    (18) writestatement -> . WRITE LEFTPARENTHESIS expression point_ae RIGHTPARENTHESIS SEMICOLON
    (19) assignstatement -> . ID ASSIGN expression point_ae SEMICOLON
    (20) assignstatement -> . ID PLUSPLUS SEMICOLON
    (21) assignstatement -> . ID MINUSMINUS SEMICOLON
    (22) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET
    (23) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET ELSE LEFTBRACKET statement RIGHTBRACKET
    (24) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (25) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON ID increment_decrement RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET

    END             shift and go to state 36
    WRITE           shift and go to state 24
    ID              shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28

    statement                      shift and go to state 35
    writestatement                 shift and go to state 19
    assignstatement                shift and go to state 20
    ifstatement                    shift and go to state 21
    whileloop                      shift and go to state 22
    forloop                        shift and go to state 23

state 19

    (12) statement -> writestatement .

    END             reduce using rule 12 (statement -> writestatement .)
    WRITE           reduce using rule 12 (statement -> writestatement .)
    ID              reduce using rule 12 (statement -> writestatement .)
    IF              reduce using rule 12 (statement -> writestatement .)
    WHILE           reduce using rule 12 (statement -> writestatement .)
    FOR             reduce using rule 12 (statement -> writestatement .)
    RIGHTBRACKET    reduce using rule 12 (statement -> writestatement .)


state 20

    (13) statement -> assignstatement .

    END             reduce using rule 13 (statement -> assignstatement .)
    WRITE           reduce using rule 13 (statement -> assignstatement .)
    ID              reduce using rule 13 (statement -> assignstatement .)
    IF              reduce using rule 13 (statement -> assignstatement .)
    WHILE           reduce using rule 13 (statement -> assignstatement .)
    FOR             reduce using rule 13 (statement -> assignstatement .)
    RIGHTBRACKET    reduce using rule 13 (statement -> assignstatement .)


state 21

    (14) statement -> ifstatement .

    END             reduce using rule 14 (statement -> ifstatement .)
    WRITE           reduce using rule 14 (statement -> ifstatement .)
    ID              reduce using rule 14 (statement -> ifstatement .)
    IF              reduce using rule 14 (statement -> ifstatement .)
    WHILE           reduce using rule 14 (statement -> ifstatement .)
    FOR             reduce using rule 14 (statement -> ifstatement .)
    RIGHTBRACKET    reduce using rule 14 (statement -> ifstatement .)


state 22

    (15) statement -> whileloop .

    END             reduce using rule 15 (statement -> whileloop .)
    WRITE           reduce using rule 15 (statement -> whileloop .)
    ID              reduce using rule 15 (statement -> whileloop .)
    IF              reduce using rule 15 (statement -> whileloop .)
    WHILE           reduce using rule 15 (statement -> whileloop .)
    FOR             reduce using rule 15 (statement -> whileloop .)
    RIGHTBRACKET    reduce using rule 15 (statement -> whileloop .)


state 23

    (16) statement -> forloop .

    END             reduce using rule 16 (statement -> forloop .)
    WRITE           reduce using rule 16 (statement -> forloop .)
    ID              reduce using rule 16 (statement -> forloop .)
    IF              reduce using rule 16 (statement -> forloop .)
    WHILE           reduce using rule 16 (statement -> forloop .)
    FOR             reduce using rule 16 (statement -> forloop .)
    RIGHTBRACKET    reduce using rule 16 (statement -> forloop .)


state 24

    (18) writestatement -> WRITE . LEFTPARENTHESIS expression point_ae RIGHTPARENTHESIS SEMICOLON

    LEFTPARENTHESIS shift and go to state 37


state 25

    (19) assignstatement -> ID . ASSIGN expression point_ae SEMICOLON
    (20) assignstatement -> ID . PLUSPLUS SEMICOLON
    (21) assignstatement -> ID . MINUSMINUS SEMICOLON

    ASSIGN          shift and go to state 38
    PLUSPLUS        shift and go to state 39
    MINUSMINUS      shift and go to state 40


state 26

    (22) ifstatement -> IF . LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET
    (23) ifstatement -> IF . LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET ELSE LEFTBRACKET statement RIGHTBRACKET

    LEFTPARENTHESIS shift and go to state 41


state 27

    (24) whileloop -> WHILE . LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET

    LEFTPARENTHESIS shift and go to state 42


state 28

    (25) forloop -> FOR . LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON ID increment_decrement RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET

    LEFTPARENTHESIS shift and go to state 43


state 29

    (3) variable -> VAR variables COLON datatype . SEMICOLON

    SEMICOLON       shift and go to state 44


state 30

    (7) datatype -> INT .

    SEMICOLON       reduce using rule 7 (datatype -> INT .)


state 31

    (8) datatype -> REAL .

    SEMICOLON       reduce using rule 8 (datatype -> REAL .)


state 32

    (9) datatype -> BOOL .

    SEMICOLON       reduce using rule 9 (datatype -> BOOL .)


state 33

    (10) datatype -> STR .

    SEMICOLON       reduce using rule 10 (datatype -> STR .)


state 34

    (6) variables -> variables COMMA variables .
    (6) variables -> variables . COMMA variables

  ! shift/reduce conflict for COMMA resolved as shift
    COLON           reduce using rule 6 (variables -> variables COMMA variables .)
    COMMA           shift and go to state 17

  ! COMMA           [ reduce using rule 6 (variables -> variables COMMA variables .) ]


state 35

    (17) statement -> statement statement .
    (17) statement -> statement . statement
    (12) statement -> . writestatement
    (13) statement -> . assignstatement
    (14) statement -> . ifstatement
    (15) statement -> . whileloop
    (16) statement -> . forloop
    (17) statement -> . statement statement
    (18) writestatement -> . WRITE LEFTPARENTHESIS expression point_ae RIGHTPARENTHESIS SEMICOLON
    (19) assignstatement -> . ID ASSIGN expression point_ae SEMICOLON
    (20) assignstatement -> . ID PLUSPLUS SEMICOLON
    (21) assignstatement -> . ID MINUSMINUS SEMICOLON
    (22) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET
    (23) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET ELSE LEFTBRACKET statement RIGHTBRACKET
    (24) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (25) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON ID increment_decrement RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET

  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    END             reduce using rule 17 (statement -> statement statement .)
    RIGHTBRACKET    reduce using rule 17 (statement -> statement statement .)
    WRITE           shift and go to state 24
    ID              shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28

  ! WRITE           [ reduce using rule 17 (statement -> statement statement .) ]
  ! ID              [ reduce using rule 17 (statement -> statement statement .) ]
  ! IF              [ reduce using rule 17 (statement -> statement statement .) ]
  ! WHILE           [ reduce using rule 17 (statement -> statement statement .) ]
  ! FOR             [ reduce using rule 17 (statement -> statement statement .) ]

    statement                      shift and go to state 35
    writestatement                 shift and go to state 19
    assignstatement                shift and go to state 20
    ifstatement                    shift and go to state 21
    whileloop                      shift and go to state 22
    forloop                        shift and go to state 23

state 36

    (11) block -> BEGIN SEMICOLON statement END . SEMICOLON

    SEMICOLON       shift and go to state 45


state 37

    (18) writestatement -> WRITE LEFTPARENTHESIS . expression point_ae RIGHTPARENTHESIS SEMICOLON
    (28) expression -> . logical_expression
    (29) expression -> . relational_expression
    (30) expression -> . arithmetic_expression
    (31) expression -> . expression_id
    (32) expression -> . STRING
    (33) logical_expression -> . relational_expression
    (34) logical_expression -> . relational_expression point_ae AND relational_expression point_ae
    (35) logical_expression -> . relational_expression point_ae OR relational_expression point_ae
    (36) logical_expression -> . logical_expression point_ae AND logical_expression point_ae
    (37) logical_expression -> . logical_expression point_ae OR logical_expression point_ae
    (38) logical_expression -> . LEFTPARENTHESIS logical_expression RIGHTPARENTHESIS
    (39) relational_expression -> . arithmetic_expression point_ae GREATER arithmetic_expression point_ae
    (40) relational_expression -> . arithmetic_expression point_ae LESSER arithmetic_expression point_ae
    (41) relational_expression -> . arithmetic_expression point_ae GREATEREQUAL arithmetic_expression point_ae
    (42) relational_expression -> . arithmetic_expression point_ae LESSEREQUAL arithmetic_expression point_ae
    (43) relational_expression -> . arithmetic_expression point_ae EQUAL arithmetic_expression point_ae
    (44) relational_expression -> . STRING EQUAL STRING
    (45) relational_expression -> . LEFTPARENTHESIS relational_expression RIGHTPARENTHESIS
    (46) relational_expression -> . BOOLEAN
    (47) arithmetic_expression -> . arithmetic_expression point_ae PLUS arithmetic_expression point_ae
    (48) arithmetic_expression -> . arithmetic_expression point_ae MINUS arithmetic_expression point_ae
    (49) arithmetic_expression -> . arithmetic_expression point_ae TIMES arithmetic_expression point_ae
    (50) arithmetic_expression -> . arithmetic_expression point_ae DIVIDE arithmetic_expression point_ae
    (51) arithmetic_expression -> . LEFTPARENTHESIS arithmetic_expression RIGHTPARENTHESIS
    (52) arithmetic_expression -> . expression_id
    (53) arithmetic_expression -> . INTEGER
    (54) arithmetic_expression -> . NUMBER
    (55) expression_id -> . ID

    STRING          shift and go to state 52
    LEFTPARENTHESIS shift and go to state 46
    BOOLEAN         shift and go to state 53
    INTEGER         shift and go to state 54
    NUMBER          shift and go to state 55
    ID              shift and go to state 56

    expression                     shift and go to state 47
    logical_expression             shift and go to state 48
    relational_expression          shift and go to state 49
    arithmetic_expression          shift and go to state 50
    expression_id                  shift and go to state 51

state 38

    (19) assignstatement -> ID ASSIGN . expression point_ae SEMICOLON
    (28) expression -> . logical_expression
    (29) expression -> . relational_expression
    (30) expression -> . arithmetic_expression
    (31) expression -> . expression_id
    (32) expression -> . STRING
    (33) logical_expression -> . relational_expression
    (34) logical_expression -> . relational_expression point_ae AND relational_expression point_ae
    (35) logical_expression -> . relational_expression point_ae OR relational_expression point_ae
    (36) logical_expression -> . logical_expression point_ae AND logical_expression point_ae
    (37) logical_expression -> . logical_expression point_ae OR logical_expression point_ae
    (38) logical_expression -> . LEFTPARENTHESIS logical_expression RIGHTPARENTHESIS
    (39) relational_expression -> . arithmetic_expression point_ae GREATER arithmetic_expression point_ae
    (40) relational_expression -> . arithmetic_expression point_ae LESSER arithmetic_expression point_ae
    (41) relational_expression -> . arithmetic_expression point_ae GREATEREQUAL arithmetic_expression point_ae
    (42) relational_expression -> . arithmetic_expression point_ae LESSEREQUAL arithmetic_expression point_ae
    (43) relational_expression -> . arithmetic_expression point_ae EQUAL arithmetic_expression point_ae
    (44) relational_expression -> . STRING EQUAL STRING
    (45) relational_expression -> . LEFTPARENTHESIS relational_expression RIGHTPARENTHESIS
    (46) relational_expression -> . BOOLEAN
    (47) arithmetic_expression -> . arithmetic_expression point_ae PLUS arithmetic_expression point_ae
    (48) arithmetic_expression -> . arithmetic_expression point_ae MINUS arithmetic_expression point_ae
    (49) arithmetic_expression -> . arithmetic_expression point_ae TIMES arithmetic_expression point_ae
    (50) arithmetic_expression -> . arithmetic_expression point_ae DIVIDE arithmetic_expression point_ae
    (51) arithmetic_expression -> . LEFTPARENTHESIS arithmetic_expression RIGHTPARENTHESIS
    (52) arithmetic_expression -> . expression_id
    (53) arithmetic_expression -> . INTEGER
    (54) arithmetic_expression -> . NUMBER
    (55) expression_id -> . ID

    STRING          shift and go to state 52
    LEFTPARENTHESIS shift and go to state 46
    BOOLEAN         shift and go to state 53
    INTEGER         shift and go to state 54
    NUMBER          shift and go to state 55
    ID              shift and go to state 56

    expression                     shift and go to state 57
    logical_expression             shift and go to state 48
    relational_expression          shift and go to state 49
    arithmetic_expression          shift and go to state 50
    expression_id                  shift and go to state 51

state 39

    (20) assignstatement -> ID PLUSPLUS . SEMICOLON

    SEMICOLON       shift and go to state 58


state 40

    (21) assignstatement -> ID MINUSMINUS . SEMICOLON

    SEMICOLON       shift and go to state 59


state 41

    (22) ifstatement -> IF LEFTPARENTHESIS . expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET
    (23) ifstatement -> IF LEFTPARENTHESIS . expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET ELSE LEFTBRACKET statement RIGHTBRACKET
    (28) expression -> . logical_expression
    (29) expression -> . relational_expression
    (30) expression -> . arithmetic_expression
    (31) expression -> . expression_id
    (32) expression -> . STRING
    (33) logical_expression -> . relational_expression
    (34) logical_expression -> . relational_expression point_ae AND relational_expression point_ae
    (35) logical_expression -> . relational_expression point_ae OR relational_expression point_ae
    (36) logical_expression -> . logical_expression point_ae AND logical_expression point_ae
    (37) logical_expression -> . logical_expression point_ae OR logical_expression point_ae
    (38) logical_expression -> . LEFTPARENTHESIS logical_expression RIGHTPARENTHESIS
    (39) relational_expression -> . arithmetic_expression point_ae GREATER arithmetic_expression point_ae
    (40) relational_expression -> . arithmetic_expression point_ae LESSER arithmetic_expression point_ae
    (41) relational_expression -> . arithmetic_expression point_ae GREATEREQUAL arithmetic_expression point_ae
    (42) relational_expression -> . arithmetic_expression point_ae LESSEREQUAL arithmetic_expression point_ae
    (43) relational_expression -> . arithmetic_expression point_ae EQUAL arithmetic_expression point_ae
    (44) relational_expression -> . STRING EQUAL STRING
    (45) relational_expression -> . LEFTPARENTHESIS relational_expression RIGHTPARENTHESIS
    (46) relational_expression -> . BOOLEAN
    (47) arithmetic_expression -> . arithmetic_expression point_ae PLUS arithmetic_expression point_ae
    (48) arithmetic_expression -> . arithmetic_expression point_ae MINUS arithmetic_expression point_ae
    (49) arithmetic_expression -> . arithmetic_expression point_ae TIMES arithmetic_expression point_ae
    (50) arithmetic_expression -> . arithmetic_expression point_ae DIVIDE arithmetic_expression point_ae
    (51) arithmetic_expression -> . LEFTPARENTHESIS arithmetic_expression RIGHTPARENTHESIS
    (52) arithmetic_expression -> . expression_id
    (53) arithmetic_expression -> . INTEGER
    (54) arithmetic_expression -> . NUMBER
    (55) expression_id -> . ID

    STRING          shift and go to state 52
    LEFTPARENTHESIS shift and go to state 46
    BOOLEAN         shift and go to state 53
    INTEGER         shift and go to state 54
    NUMBER          shift and go to state 55
    ID              shift and go to state 56

    expression                     shift and go to state 60
    logical_expression             shift and go to state 48
    relational_expression          shift and go to state 49
    arithmetic_expression          shift and go to state 50
    expression_id                  shift and go to state 51

state 42

    (24) whileloop -> WHILE LEFTPARENTHESIS . expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (28) expression -> . logical_expression
    (29) expression -> . relational_expression
    (30) expression -> . arithmetic_expression
    (31) expression -> . expression_id
    (32) expression -> . STRING
    (33) logical_expression -> . relational_expression
    (34) logical_expression -> . relational_expression point_ae AND relational_expression point_ae
    (35) logical_expression -> . relational_expression point_ae OR relational_expression point_ae
    (36) logical_expression -> . logical_expression point_ae AND logical_expression point_ae
    (37) logical_expression -> . logical_expression point_ae OR logical_expression point_ae
    (38) logical_expression -> . LEFTPARENTHESIS logical_expression RIGHTPARENTHESIS
    (39) relational_expression -> . arithmetic_expression point_ae GREATER arithmetic_expression point_ae
    (40) relational_expression -> . arithmetic_expression point_ae LESSER arithmetic_expression point_ae
    (41) relational_expression -> . arithmetic_expression point_ae GREATEREQUAL arithmetic_expression point_ae
    (42) relational_expression -> . arithmetic_expression point_ae LESSEREQUAL arithmetic_expression point_ae
    (43) relational_expression -> . arithmetic_expression point_ae EQUAL arithmetic_expression point_ae
    (44) relational_expression -> . STRING EQUAL STRING
    (45) relational_expression -> . LEFTPARENTHESIS relational_expression RIGHTPARENTHESIS
    (46) relational_expression -> . BOOLEAN
    (47) arithmetic_expression -> . arithmetic_expression point_ae PLUS arithmetic_expression point_ae
    (48) arithmetic_expression -> . arithmetic_expression point_ae MINUS arithmetic_expression point_ae
    (49) arithmetic_expression -> . arithmetic_expression point_ae TIMES arithmetic_expression point_ae
    (50) arithmetic_expression -> . arithmetic_expression point_ae DIVIDE arithmetic_expression point_ae
    (51) arithmetic_expression -> . LEFTPARENTHESIS arithmetic_expression RIGHTPARENTHESIS
    (52) arithmetic_expression -> . expression_id
    (53) arithmetic_expression -> . INTEGER
    (54) arithmetic_expression -> . NUMBER
    (55) expression_id -> . ID

    STRING          shift and go to state 52
    LEFTPARENTHESIS shift and go to state 46
    BOOLEAN         shift and go to state 53
    INTEGER         shift and go to state 54
    NUMBER          shift and go to state 55
    ID              shift and go to state 56

    expression                     shift and go to state 61
    logical_expression             shift and go to state 48
    relational_expression          shift and go to state 49
    arithmetic_expression          shift and go to state 50
    expression_id                  shift and go to state 51

state 43

    (25) forloop -> FOR LEFTPARENTHESIS . ID ASSIGN expression SEMICOLON expression SEMICOLON ID increment_decrement RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET

    ID              shift and go to state 62


state 44

    (3) variable -> VAR variables COLON datatype SEMICOLON .

    BEGIN           reduce using rule 3 (variable -> VAR variables COLON datatype SEMICOLON .)
    VAR             reduce using rule 3 (variable -> VAR variables COLON datatype SEMICOLON .)


state 45

    (11) block -> BEGIN SEMICOLON statement END SEMICOLON .

    RIGHTBRACKET    reduce using rule 11 (block -> BEGIN SEMICOLON statement END SEMICOLON .)


state 46
